--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,3 +7,11 @@ edition = "2021"
 
 [dependencies]
 rand = "0.8"
+clap = { version = "4.4.6", features = ["derive"]}
+serde = { version = "1.0", features = ["derive"] }
+atty = "0.2.14"
+serde_json = "1.0"
+
+[[bin]]
+name = "enigma"
+path = "src/main.rs"
